parser.output
State 65 conflicts: 4 shift/reduce
State 85 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: item
    2        | program item

    3 item: declaration
    4     | func_decl

    5 declaration: TYPE ID SEMICOLON
    6            | TYPE ID LBRACKET NUM RBRACKET SEMICOLON

    7 func_decl: TYPE ID LPAREN param_list RPAREN func_body
    8          | TYPE ID LPAREN RPAREN func_body

    9 param_list: params

   10 params: TYPE ID
   11       | params COMMA TYPE ID

   12 func_body: LBRACE statement_list RBRACE
   13          | LBRACE RBRACE

   14 block: LBRACE statement_list RBRACE
   15      | LBRACE RBRACE
   16      | statement

   17 statement_list: statement
   18               | statement_list statement

   19 statement: declaration
   20          | assignment SEMICOLON
   21          | if_statement
   22          | while_statement
   23          | for_statement
   24          | return_statement SEMICOLON

   25 assignment: ID ASSIGN expr
   26           | ID LBRACKET expr RBRACKET ASSIGN expr

   27 if_statement: IF LPAREN expr RPAREN block ELSE block
   28             | IF LPAREN expr RPAREN block

   29 while_statement: WHILE LPAREN expr RPAREN block

   30 for_statement: FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block

   31 return_statement: RETURN expr
   32                 | RETURN

   33 expr: NUM
   34     | ID
   35     | ID LBRACKET expr RBRACKET
   36     | ID LPAREN arg_list RPAREN
   37     | ID LPAREN RPAREN
   38     | expr ARITH_OP expr
   39     | expr REL_OP expr
   40     | expr AND expr
   41     | expr OR expr
   42     | NOT expr
   43     | LPAREN expr RPAREN

   44 arg_list: expr
   45         | arg_list COMMA expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <str> (258) 5 6 7 8 10 11
    ID <str> (259) 5 6 7 8 10 11 25 26 34 35 36 37
    ARITH_OP <str> (260) 38
    REL_OP <str> (261) 39
    NUM <num> (262) 6 33
    IF (263) 27 28
    ELSE (264) 27
    WHILE (265) 29
    FOR (266) 30
    RETURN (267) 31 32
    ASSIGN (268) 25 26
    SEMICOLON (269) 5 6 20 24 30
    LPAREN (270) 7 8 27 28 29 30 36 37 43
    RPAREN (271) 7 8 27 28 29 30 36 37 43
    LBRACE (272) 12 13 14 15
    RBRACE (273) 12 13 14 15
    AND (274) 40
    OR (275) 41
    NOT (276) 42
    LBRACKET (277) 6 26 35
    RBRACKET (278) 6 26 35
    COMMA (279) 11 45


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program <node> (26)
        on left: 1 2
        on right: 0 2
    item <node> (27)
        on left: 3 4
        on right: 1 2
    declaration <node> (28)
        on left: 5 6
        on right: 3 19
    func_decl <node> (29)
        on left: 7 8
        on right: 4
    param_list <node> (30)
        on left: 9
        on right: 7
    params <node> (31)
        on left: 10 11
        on right: 9 11
    func_body <node> (32)
        on left: 12 13
        on right: 7 8
    block <node> (33)
        on left: 14 15 16
        on right: 27 28 29 30
    statement_list <node> (34)
        on left: 17 18
        on right: 12 14 18
    statement <node> (35)
        on left: 19 20 21 22 23 24
        on right: 16 17 18
    assignment <node> (36)
        on left: 25 26
        on right: 20 30
    if_statement <node> (37)
        on left: 27 28
        on right: 21
    while_statement <node> (38)
        on left: 29
        on right: 22
    for_statement <node> (39)
        on left: 30
        on right: 23
    return_statement <node> (40)
        on left: 31 32
        on right: 24
    expr <node> (41)
        on left: 33 34 35 36 37 38 39 40 41 42 43
        on right: 25 26 27 28 29 30 31 35 38 39 40 41 42 43 44 45
    arg_list <node> (42)
        on left: 44 45
        on right: 36 45


State 0

    0 $accept: . program $end

    TYPE  shift, and go to state 1

    program      go to state 2
    item         go to state 3
    declaration  go to state 4
    func_decl    go to state 5


State 1

    5 declaration: TYPE . ID SEMICOLON
    6            | TYPE . ID LBRACKET NUM RBRACKET SEMICOLON
    7 func_decl: TYPE . ID LPAREN param_list RPAREN func_body
    8          | TYPE . ID LPAREN RPAREN func_body

    ID  shift, and go to state 6


State 2

    0 $accept: program . $end
    2 program: program . item

    $end  shift, and go to state 7
    TYPE  shift, and go to state 1

    item         go to state 8
    declaration  go to state 4
    func_decl    go to state 5


State 3

    1 program: item .

    $default  reduce using rule 1 (program)


State 4

    3 item: declaration .

    $default  reduce using rule 3 (item)


State 5

    4 item: func_decl .

    $default  reduce using rule 4 (item)


State 6

    5 declaration: TYPE ID . SEMICOLON
    6            | TYPE ID . LBRACKET NUM RBRACKET SEMICOLON
    7 func_decl: TYPE ID . LPAREN param_list RPAREN func_body
    8          | TYPE ID . LPAREN RPAREN func_body

    SEMICOLON  shift, and go to state 9
    LPAREN     shift, and go to state 10
    LBRACKET   shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    2 program: program item .

    $default  reduce using rule 2 (program)


State 9

    5 declaration: TYPE ID SEMICOLON .

    $default  reduce using rule 5 (declaration)


State 10

    7 func_decl: TYPE ID LPAREN . param_list RPAREN func_body
    8          | TYPE ID LPAREN . RPAREN func_body

    TYPE    shift, and go to state 12
    RPAREN  shift, and go to state 13

    param_list  go to state 14
    params      go to state 15


State 11

    6 declaration: TYPE ID LBRACKET . NUM RBRACKET SEMICOLON

    NUM  shift, and go to state 16


State 12

   10 params: TYPE . ID

    ID  shift, and go to state 17


State 13

    8 func_decl: TYPE ID LPAREN RPAREN . func_body

    LBRACE  shift, and go to state 18

    func_body  go to state 19


State 14

    7 func_decl: TYPE ID LPAREN param_list . RPAREN func_body

    RPAREN  shift, and go to state 20


State 15

    9 param_list: params .
   11 params: params . COMMA TYPE ID

    COMMA  shift, and go to state 21

    $default  reduce using rule 9 (param_list)


State 16

    6 declaration: TYPE ID LBRACKET NUM . RBRACKET SEMICOLON

    RBRACKET  shift, and go to state 22


State 17

   10 params: TYPE ID .

    $default  reduce using rule 10 (params)


State 18

   12 func_body: LBRACE . statement_list RBRACE
   13          | LBRACE . RBRACE

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    RBRACE  shift, and go to state 29

    declaration       go to state 30
    statement_list    go to state 31
    statement         go to state 32
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 19

    8 func_decl: TYPE ID LPAREN RPAREN func_body .

    $default  reduce using rule 8 (func_decl)


State 20

    7 func_decl: TYPE ID LPAREN param_list RPAREN . func_body

    LBRACE  shift, and go to state 18

    func_body  go to state 38


State 21

   11 params: params COMMA . TYPE ID

    TYPE  shift, and go to state 39


State 22

    6 declaration: TYPE ID LBRACKET NUM RBRACKET . SEMICOLON

    SEMICOLON  shift, and go to state 40


State 23

    5 declaration: TYPE . ID SEMICOLON
    6            | TYPE . ID LBRACKET NUM RBRACKET SEMICOLON

    ID  shift, and go to state 41


State 24

   25 assignment: ID . ASSIGN expr
   26           | ID . LBRACKET expr RBRACKET ASSIGN expr

    ASSIGN    shift, and go to state 42
    LBRACKET  shift, and go to state 43


State 25

   27 if_statement: IF . LPAREN expr RPAREN block ELSE block
   28             | IF . LPAREN expr RPAREN block

    LPAREN  shift, and go to state 44


State 26

   29 while_statement: WHILE . LPAREN expr RPAREN block

    LPAREN  shift, and go to state 45


State 27

   30 for_statement: FOR . LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block

    LPAREN  shift, and go to state 46


State 28

   31 return_statement: RETURN . expr
   32                 | RETURN .

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    $default  reduce using rule 32 (return_statement)

    expr  go to state 51


State 29

   13 func_body: LBRACE RBRACE .

    $default  reduce using rule 13 (func_body)


State 30

   19 statement: declaration .

    $default  reduce using rule 19 (statement)


State 31

   12 func_body: LBRACE statement_list . RBRACE
   18 statement_list: statement_list . statement

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    RBRACE  shift, and go to state 52

    declaration       go to state 30
    statement         go to state 53
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 32

   17 statement_list: statement .

    $default  reduce using rule 17 (statement_list)


State 33

   20 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 34

   21 statement: if_statement .

    $default  reduce using rule 21 (statement)


State 35

   22 statement: while_statement .

    $default  reduce using rule 22 (statement)


State 36

   23 statement: for_statement .

    $default  reduce using rule 23 (statement)


State 37

   24 statement: return_statement . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 38

    7 func_decl: TYPE ID LPAREN param_list RPAREN func_body .

    $default  reduce using rule 7 (func_decl)


State 39

   11 params: params COMMA TYPE . ID

    ID  shift, and go to state 56


State 40

    6 declaration: TYPE ID LBRACKET NUM RBRACKET SEMICOLON .

    $default  reduce using rule 6 (declaration)


State 41

    5 declaration: TYPE ID . SEMICOLON
    6            | TYPE ID . LBRACKET NUM RBRACKET SEMICOLON

    SEMICOLON  shift, and go to state 9
    LBRACKET   shift, and go to state 11


State 42

   25 assignment: ID ASSIGN . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 57


State 43

   26 assignment: ID LBRACKET . expr RBRACKET ASSIGN expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 58


State 44

   27 if_statement: IF LPAREN . expr RPAREN block ELSE block
   28             | IF LPAREN . expr RPAREN block

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 59


State 45

   29 while_statement: WHILE LPAREN . expr RPAREN block

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 60


State 46

   30 for_statement: FOR LPAREN . assignment SEMICOLON expr SEMICOLON assignment RPAREN block

    ID  shift, and go to state 24

    assignment  go to state 61


State 47

   34 expr: ID .
   35     | ID . LBRACKET expr RBRACKET
   36     | ID . LPAREN arg_list RPAREN
   37     | ID . LPAREN RPAREN

    LPAREN    shift, and go to state 62
    LBRACKET  shift, and go to state 63

    $default  reduce using rule 34 (expr)


State 48

   33 expr: NUM .

    $default  reduce using rule 33 (expr)


State 49

   43 expr: LPAREN . expr RPAREN

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 64


State 50

   42 expr: NOT . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 65


State 51

   31 return_statement: RETURN expr .
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 31 (return_statement)


State 52

   12 func_body: LBRACE statement_list RBRACE .

    $default  reduce using rule 12 (func_body)


State 53

   18 statement_list: statement_list statement .

    $default  reduce using rule 18 (statement_list)


State 54

   20 statement: assignment SEMICOLON .

    $default  reduce using rule 20 (statement)


State 55

   24 statement: return_statement SEMICOLON .

    $default  reduce using rule 24 (statement)


State 56

   11 params: params COMMA TYPE ID .

    $default  reduce using rule 11 (params)


State 57

   25 assignment: ID ASSIGN expr .
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 25 (assignment)


State 58

   26 assignment: ID LBRACKET expr . RBRACKET ASSIGN expr
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69
    RBRACKET  shift, and go to state 70


State 59

   27 if_statement: IF LPAREN expr . RPAREN block ELSE block
   28             | IF LPAREN expr . RPAREN block
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    RPAREN    shift, and go to state 71
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 60

   29 while_statement: WHILE LPAREN expr . RPAREN block
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    RPAREN    shift, and go to state 72
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 61

   30 for_statement: FOR LPAREN assignment . SEMICOLON expr SEMICOLON assignment RPAREN block

    SEMICOLON  shift, and go to state 73


State 62

   36 expr: ID LPAREN . arg_list RPAREN
   37     | ID LPAREN . RPAREN

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    RPAREN  shift, and go to state 74
    NOT     shift, and go to state 50

    expr      go to state 75
    arg_list  go to state 76


State 63

   35 expr: ID LBRACKET . expr RBRACKET

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 77


State 64

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr
   43     | LPAREN expr . RPAREN

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    RPAREN    shift, and go to state 78
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 65

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr
   42     | NOT expr .

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    ARITH_OP  [reduce using rule 42 (expr)]
    REL_OP    [reduce using rule 42 (expr)]
    AND       [reduce using rule 42 (expr)]
    OR        [reduce using rule 42 (expr)]
    $default  reduce using rule 42 (expr)


State 66

   38 expr: expr ARITH_OP . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 79


State 67

   39 expr: expr REL_OP . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 80


State 68

   40 expr: expr AND . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 81


State 69

   41 expr: expr OR . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 82


State 70

   26 assignment: ID LBRACKET expr RBRACKET . ASSIGN expr

    ASSIGN  shift, and go to state 83


State 71

   27 if_statement: IF LPAREN expr RPAREN . block ELSE block
   28             | IF LPAREN expr RPAREN . block

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    LBRACE  shift, and go to state 84

    declaration       go to state 30
    block             go to state 85
    statement         go to state 86
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 72

   29 while_statement: WHILE LPAREN expr RPAREN . block

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    LBRACE  shift, and go to state 84

    declaration       go to state 30
    block             go to state 87
    statement         go to state 86
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 73

   30 for_statement: FOR LPAREN assignment SEMICOLON . expr SEMICOLON assignment RPAREN block

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 88


State 74

   37 expr: ID LPAREN RPAREN .

    $default  reduce using rule 37 (expr)


State 75

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr
   44 arg_list: expr .

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 44 (arg_list)


State 76

   36 expr: ID LPAREN arg_list . RPAREN
   45 arg_list: arg_list . COMMA expr

    RPAREN  shift, and go to state 89
    COMMA   shift, and go to state 90


State 77

   35 expr: ID LBRACKET expr . RBRACKET
   38     | expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69
    RBRACKET  shift, and go to state 91


State 78

   43 expr: LPAREN expr RPAREN .

    $default  reduce using rule 43 (expr)


State 79

   38 expr: expr . ARITH_OP expr
   38     | expr ARITH_OP expr .
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    $default  reduce using rule 38 (expr)


State 80

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   39     | expr REL_OP expr .
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66

    $default  reduce using rule 39 (expr)


State 81

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   40     | expr AND expr .
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67

    $default  reduce using rule 40 (expr)


State 82

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr
   41     | expr OR expr .

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68

    $default  reduce using rule 41 (expr)


State 83

   26 assignment: ID LBRACKET expr RBRACKET ASSIGN . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 92


State 84

   14 block: LBRACE . statement_list RBRACE
   15      | LBRACE . RBRACE

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    RBRACE  shift, and go to state 93

    declaration       go to state 30
    statement_list    go to state 94
    statement         go to state 32
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 85

   27 if_statement: IF LPAREN expr RPAREN block . ELSE block
   28             | IF LPAREN expr RPAREN block .

    ELSE  shift, and go to state 95

    ELSE      [reduce using rule 28 (if_statement)]
    $default  reduce using rule 28 (if_statement)


State 86

   16 block: statement .

    $default  reduce using rule 16 (block)


State 87

   29 while_statement: WHILE LPAREN expr RPAREN block .

    $default  reduce using rule 29 (while_statement)


State 88

   30 for_statement: FOR LPAREN assignment SEMICOLON expr . SEMICOLON assignment RPAREN block
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP   shift, and go to state 66
    REL_OP     shift, and go to state 67
    SEMICOLON  shift, and go to state 96
    AND        shift, and go to state 68
    OR         shift, and go to state 69


State 89

   36 expr: ID LPAREN arg_list RPAREN .

    $default  reduce using rule 36 (expr)


State 90

   45 arg_list: arg_list COMMA . expr

    ID      shift, and go to state 47
    NUM     shift, and go to state 48
    LPAREN  shift, and go to state 49
    NOT     shift, and go to state 50

    expr  go to state 97


State 91

   35 expr: ID LBRACKET expr RBRACKET .

    $default  reduce using rule 35 (expr)


State 92

   26 assignment: ID LBRACKET expr RBRACKET ASSIGN expr .
   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 26 (assignment)


State 93

   15 block: LBRACE RBRACE .

    $default  reduce using rule 15 (block)


State 94

   14 block: LBRACE statement_list . RBRACE
   18 statement_list: statement_list . statement

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    RBRACE  shift, and go to state 98

    declaration       go to state 30
    statement         go to state 53
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 95

   27 if_statement: IF LPAREN expr RPAREN block ELSE . block

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    LBRACE  shift, and go to state 84

    declaration       go to state 30
    block             go to state 99
    statement         go to state 86
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 96

   30 for_statement: FOR LPAREN assignment SEMICOLON expr SEMICOLON . assignment RPAREN block

    ID  shift, and go to state 24

    assignment  go to state 100


State 97

   38 expr: expr . ARITH_OP expr
   39     | expr . REL_OP expr
   40     | expr . AND expr
   41     | expr . OR expr
   45 arg_list: arg_list COMMA expr .

    ARITH_OP  shift, and go to state 66
    REL_OP    shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 45 (arg_list)


State 98

   14 block: LBRACE statement_list RBRACE .

    $default  reduce using rule 14 (block)


State 99

   27 if_statement: IF LPAREN expr RPAREN block ELSE block .

    $default  reduce using rule 27 (if_statement)


State 100

   30 for_statement: FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment . RPAREN block

    RPAREN  shift, and go to state 101


State 101

   30 for_statement: FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN . block

    TYPE    shift, and go to state 23
    ID      shift, and go to state 24
    IF      shift, and go to state 25
    WHILE   shift, and go to state 26
    FOR     shift, and go to state 27
    RETURN  shift, and go to state 28
    LBRACE  shift, and go to state 84

    declaration       go to state 30
    block             go to state 102
    statement         go to state 86
    assignment        go to state 33
    if_statement      go to state 34
    while_statement   go to state 35
    for_statement     go to state 36
    return_statement  go to state 37


State 102

   30 for_statement: FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block .

    $default  reduce using rule 30 (for_statement)
